estilos al front

--- a/PokedexWeb/PokedexWeb/Pages/Index.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Index.cshtml
@@ -1,10 +1,31 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Inicio";
 }
 
-<div class="text-center">
-    <h1 class="display-4">WebDex</h1>
-    <p>Consultar lista de <a href="/Pokemon/Index">Pokemon</a>.</p>
-</div>
+
+
+
+
+<h1 class="text-center my-3">Bienvenido a <img src="/img/logo.png" height="90" /></h1>
+    <p class="text-center py-2">Consultar lista de <a href="/Pokemon/Index">Pokemon</a>.</p>
+    <p>
+    
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultricies lacus nisi, ut efficitur
+        metus
+        accumsan a. Praesent lorem magna, molestie vitae sem ut, scelerisque pharetra arcu. Pellentesque
+        efficitur, sem vitae tincidunt gravida, nunc sem tempus leo, vitae lobortis mi nulla a leo.
+        Vestibulum
+        diam sem, dignissim sit amet quam sed, pulvinar porta neque. Donec tempor eu ex vitae convallis.
+        Nullam
+        aliquam enim est, eu ornare purus suscipit vel. Mauris quis dictum velit, id imperdiet mauris. Nunc
+        vitae hendrerit lacus. Nam ligula lectus, efficitur sed finibus sed, varius eu ante. Donec sit amet
+        ligula in elit ultrices viverra vel sed mauris. Curabitur maximus nunc quis ante tincidunt
+        facilisis.
+        Nullam ultricies luctus orci in consectetur. Sed lectus nibh, pharetra a erat eu, tristique
+        elementum
+        nunc.
+    </p>
+
+
