--- a/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Detalle.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Detalle.cshtml
@@ -1,76 +1,78 @@
 ﻿@page
 @model PokedexWeb.Pages.Views.Pokemon.DetalleModel
 @{
-    <main class="content">
-        <div class="container-fluid p-0">
-            <div class="col-8 mx-auto">
 
-                <h1 class="text-center mb-3">Bulbasaur</h1>
+    <div class="col-10 mx-auto">
 
-                <div class="row g-5">
-                    <div class="col-md-4 col-lg-3 order-md-last">
-                        <img src="https://img.pokemondb.net/artwork/bulbasaur.jpg" height="306">
-                    </div>
-                    <div class="col-md-6 col-lg-7">
-						<h3>Informacion</h3>
-						<table>
-							<tbody>
-								<tr class="border-bottom">
-									<th class="py-3 text-end">#</th>
-									<td class="px-3 py-3">001</td>
-								</tr>
-								<tr class="border-bottom">
-									<th class="py-3 text-end">Tipo</th>
-									<td class="px-3 py-3">
-										<span class="badge text-bg-success rounded-pill" id="planta">Planta</span>
-										<span class="badge text-bg-success rounded-pill" id="veneno">Veneno</span>
-									</td>
-								</tr>
-								<tr class="border-bottom">
-									<th class="py-3 text-end">Debilidad</th>
-									<td class="px-3 py-3">
-										<span class="badge text-bg-success rounded-pill" id="fuego">Fuego</span>
-										<span class="badge text-bg-success rounded-pill" id="hielo">Hielo</span>
-										<span class="badge text-bg-success rounded-pill" id="volador">Volador</span>
-										<span class="badge text-bg-success rounded-pill" id="psiquico">Psiquico</span>
-									</td>
-								</tr>
-								<tr class="border-bottom">
-									<th class="py-3 text-end">Weight</th>
-									<td class="px-3 py-3">6.9 kg</td>
-								</tr>
-							</tbody>
-						</table>
-                    </div>
-					
+        <h1 class="text-center mb-5">Bulbasaur</h1>
+
+        <div class="row g-5">
+            <div class="col-md-4 col-lg-3 order-md-last">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" height="306">
+            </div>
+            <div class="col-md-6 col-lg-7">
+                <h3 class="title2">Información</h3>
+                <table>
+                    <tbody>
+                        <tr class="border-bottom">
+                            <th class="py-3 text-end">#</th>
+                            <td class="px-3 py-3">001</td>
+                        </tr>
+                        <tr class="border-bottom">
+                            <th class="py-3 text-end">Tipo</th>
+                            <td class="px-3 py-3">
+                                <span class="badge text-bg-success rounded-pill" id="planta">Planta</span>
+                                <span class="badge text-bg-success rounded-pill" id="veneno">Veneno</span>
+                            </td>
+                        </tr>
+                        <tr class="border-bottom">
+                            <th class="py-3 text-end">Debilidad</th>
+                            <td class="px-3 py-3">
+                                <span class="badge text-bg-success rounded-pill" id="fuego">Fuego</span>
+                                <span class="badge text-bg-success rounded-pill" id="hielo">Hielo</span>
+                                <span class="badge text-bg-success rounded-pill" id="volador">Volador</span>
+                                <span class="badge text-bg-success rounded-pill" id="psiquico">Psiquico</span>
+                            </td>
+                        </tr>
+                        <tr class="border-bottom">
+                            <th class="py-3 text-end">Weight</th>
+                            <td class="px-3 py-3">6.9 kg</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+        <div class="mt-4">
+            <h3 class="title2">Evoluciones</h3>
+            <div class="row g-4 py-5 row-cols-1 row-cols-md-3">
+
+                <div class="feature col  text-center">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" height="120" />
+                    <h4>Bulbasaur <small class="text-body-secondary">001</small></h4>
+                    <button class="button-red py-2 mb-3">
+                        <a href="" type="button" class="text-white text-decoration-none">Ir »</a>
+                    </button>
+
                 </div>
-				<div class="mt-4">
-					<h3>Evoluciones</h3>
-					<div class="row g-4 py-5 row-cols-1 row-cols-md-3">
-
-						<div class="feature col  text-center">
-							<img src="https://img.pokemondb.net/artwork/bulbasaur.jpg" height="120" />
-							<h4>Bulbasaur <small class="text-body-secondary">001</small></h4>
-							<p><a class="btn btn-danger" href="#" style="font-family: Silkscreen, sans-serif;">Ir »</a></p>
-
-						</div>
-						<div class="feature col  text-center">
-							<img src="https://img.pokemondb.net/artwork/ivysaur.jpg" height="120" />
-							<h4>Ivysaur <small class="text-body-secondary">002</small></h4>
-							<p><a class="btn btn-danger" href="#" style="font-family: Silkscreen, sans-serif;">Ir »</a></p>
-
-						</div>
-						<div class="feature col  text-center">
-							<img src="https://img.pokemondb.net/artwork/venusaur.jpg" height="120" />
-							<h4>Venusaur <small class="text-body-secondary">003</small></h4>
-							<p><a class="btn btn-danger" href="#" style="font-family: Silkscreen, sans-serif;">Ir »</a></p>
-
-						</div>
-					</div>
-				</div>
-				
+                <div class="feature col  text-center">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/2.png" height="120" />
+                    <h4>Ivysaur <small class="text-body-secondary">002</small></h4>
+                    <button class="button-red py-2 mb-3">
+                        <a href="" type="button" class="text-white text-decoration-none">Ir »</a>
+                    </button>
+                </div>
+                <div class="feature col  text-center">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/3.png" height="120" />
+                    <h4>Venusaur <small class="text-body-secondary">003</small></h4>
+                    <button class="button-red py-2 mb-3">
+                        <a href="" type="button" class="text-white text-decoration-none">Ir »</a>
+                    </button>
+                </div>
             </div>
         </div>
-    </main>
+
+    </div>
+
 
 }
