--- a/PokedexWeb/PokedexWeb/Pages/Views/Registro.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Registro.cshtml
@@ -1,41 +1,51 @@
 ﻿@page
 @model RegistroModel
 @{
-    <main class="container my-4" id="registro">
-        <div class="row justify-content-center mb-6">
-            <div class="col-xl-5 col-lg-6 col-md-8 col-12 ">
-
-                <div id="dialogbox" class="p-4">
-
-                    <form class="m-4 needs-validation" method="post">
-                        <h1 class="text-center mb-4">Registro</h1>
-                        <div class="form-group text-start ">
-                            <label class="form-label text-start" for="usuario">Nombre de Usuario</label>
-                            <input type="text" class="form-control mb-2" id="usuario" name="usuario">
-                        </div>
-                        <div class="form-group text-start mt-2">
-                            <label class="form-label text-start" for="correo">Correo Electrónico</label>
-                            <input placeholder="name@address.com" type="email" class="form-control" name="correo" id="correo">
-                        </div>
-                        <div class="form-group text-start mt-2">
-                            <label class="form-label" for="password">Contraseña</label>
-                            <input placeholder="Ingresa tú contraseña" type="password" class="form-control" id="password" name="password">
-                        </div>
-                        <div class="form-group text-start mt-2">
-                            <label class="form-label" for="password">Confirmar contraseña</label>
-                            <input placeholder="Ingresa tú contraseña" type="password" class="form-control" id="password" name="password">
-                        </div>
-                        <button type="button" class="w-100 my-3 btn btn-primary">Registrar</button>
-                        <p class="text-center"><small class="text-body-secondary text-center">Ya tienes una cuenta? <a href="/Views/Login">Inicia Sesion</a>.</small></p>
-                    </form>
-
-                </div>
-
-
-            </div>
-        </div>
-    </main>
+   
+    ViewData["Title"] = "Registro";
 
 }
 
+    <div class="row justify-content-center mb-6">
+        <h1 class=" fw-bold text-center my-3">Registro</h1>
+        <div class="col-6 m-4">
+            <form class="needs-validation mb-6" method="post">
+
+                <div class="mb-3">
+                    <label for="name" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="name" name="name" required="">
+                    <div class="invalid-feedback">Por favor ingrese su nombre</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="email" class="form-label">
+                        Email
+                        <span class="text-danger">*</span>
+                    </label>
+                    <input type="email" class="form-control" id="email" name="email" required="">
+                    <div class="invalid-feedback">Por favor ingrese su correo</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control" id="password" name="password" required="">
+                    <div class="invalid-feedback">Por favor ingrese una contraseña</div>
+                </div>
+
+                <div class=" mb-4 text-center">
+                    <span class="text-center">
+                        ¿Ya tienes una cuenta?
+                        <a href="/Usuarios/Login" class="text-primary ">Inicia Sesion</a>
+                    </span>
+                </div>
+
+                <div class="d-grid">
+                    <button class="button-blue py-2 mb-3">
+                        <a href="/Views/Pokemon/Agregar" type="button" class="text-white text-decoration-none">Registrarse</a>
+                    </button>
+                </div>
+
+            </form>
+        </div>
+    </div>
 
