--- a/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Views/Enfermeria/Index">Centro Pokémon</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Views/Batalla">Batallas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Views/Batalla/Batalla">Batallas</a>
                         </li>
                     </ul>
                     <div class="d-flex align-items-center">
