--- a/PokedexWeb/PokedexWeb/Pages/Views/Enfermeria/Index.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Enfermeria/Index.cshtml
@@ -6,76 +6,83 @@
 }
 
 <h1 class="text-center my-3">Enfermería</h1>
-
-<div class="row">
-    <div class="mb-3 d-flex justify-content-between align-items-center w-100">
-        <p class="title2">Mis Casos Asignados</p>
+<div class="mx-5">
+    <div class="row">
+        <div class="mt-4 d-flex justify-content-between align-items-center w-100">
+            <p class="title2">Mis Casos</p>
+        </div>
     </div>
-</div>
 
-<div class="row mb-4">
-    <div class="md-auto">
-        <div class="card table-responsive">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Nombre</th>
-                        <th>Peso</th>
-                        <th>Entrenador</th>
-                        <th>Enfermero</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>001</td>
-                        <td><a href="/Views/Pokemon/Detalle">Bulbasaur</a></td>
-                        <td>6.9 kg</td>
-                        <td>Ash</td>
-                        <td>Joy</td>
-                        <td>
-                            <a href="">Dar de alta</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="row mb-4">
+        <div class="md-auto">
+            <div class="table-responsive">
+                <table class="table-style align-middle">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Nombre</th>
+                            <th>Peso</th>
+                            <th>Entrenador</th>
+                            <th>Enfermero</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>001</td>
+                            <td><a href="/Views/Pokemon/Detalle">Bulbasaur</a></td>
+                            <td>6.9 kg</td>
+                            <td>Ash</td>
+                            <td>Joy</td>
+                            <td class="text-center" width="25%">
+                                <button class="button py-2">
+                                    <a href="" type="button" class="text-white text-decoration-none">Dar de alta</a>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="mt-4 d-flex justify-content-between align-items-center w-100">
+            <p class="title2">Casos Pendientes</p>
+        </div>
+    </div>
+
+    <div class="row ">
+        <div class="md-auto">
+            <div class="table-responsive">
+                <table class="table-style">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Nombre</th>
+                            <th>Peso</th>
+                            <th>Entrenador</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>002</td>
+                            <td><a href="">Ivysaur</a></td>
+                            <td>13.0 kg</td>
+                            <td>Serena</td>
+
+                            <td class="text-center" width="20%">
+                                <button class="button py-2">
+                                    <a href="" type="button" class="text-white text-decoration-none">Asignar</a>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
 
-
-<div class="row">
-    <div class="mb-3 d-flex justify-content-between align-items-center w-100">
-        <p class="title2">Mis Casos Asignados</p>
-    </div>
-</div>
-
-<div class="row ">
-    <div class="md-auto">
-        <div class="card table-responsive">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Nombre</th>
-                        <th>Peso</th>
-                        <th>Entrenador</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>002</td>
-                        <td><a href="">Ivysaur</a></td>
-                        <td>13.0 kg</td>
-                        <td>Serena</td>
-                        <td>
-                            <a href="">Asignar</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
