--- a/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Editar.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Editar.cshtml
@@ -1,60 +1,66 @@
 ﻿@page
 @model PokedexWeb.Pages.Views.Pokemon.EditarModel
 @{
+    ViewData["Title"] = "Editar Pokémon";
 }
-<main class="content">
-    <div class="container-fluid p-0">
-        <div id="dialogbox" class="col-8 mx-auto mt-5 py-3">
+<h1 class="text-center my-3">Editar Pokémon</h1>
+<div class="mx-5">
+    <div class="row  d-flex justify-content-center">
+        <form class="mt-4 col-10">
+            <div class="mb-3">
+                <input type="number" class="form-control" id="id_pokemon" required disabled hidden>
+            </div>
+            <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre del Pokémon</label>
+                <input type="text" class="form-control" id="nombre" placeholder="Ej. Pikachu, Eevee, Mewtwo" required>
+            </div>
+            <div class="row">
+                <div class="col mb-3">
+                    <label for="tipo" class="form-label">Tipo:</label>
+                    <select class="form-select" data-coreui-search="true" required id="tipo">
+                        <option value="fuego" selected>Fuego</option>
+                        <option value="hielo">Hielo</option>
+                        <option value="volador">Volador</option>
+                        <option value="psiquico">Psiquico</option>
+                        <option value="electrico">Eléctrico</option>
+                    </select>
+                </div>
+                <div class="col mb-3">
+                    <label for="debilidad" class="form-label">Habilidad:</label>
 
-            <h1 class="text-center my-3">Editar Pokemon</h1>
+                    <select class="form-select" data-coreui-search="true" required id="debilidad">
+                        <option value="" selected>Absorbe agua</option>
+                        <option value="">Absorbe electricidad</option>
+                        <option value="">Aclimatación</option>
+                        <option value="">Allagas</option>
+                        <option value="">Pereza</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-3">
+                    <label for="altura" class="form-label">Altura:</label>
+                    <input type="number" class="form-control" id="altura" required>
+                </div>
+                <div class="col mb-3">
+                    <label for="peso" class="form-label">Peso:</label>
+                    <input type="number" class="form-control" id="peso" required>
+                </div>
+            </div>
+            <div class="col mb-3">
+                <label for="evoluciones" class="form-label">Evoluciones:</label>
+                <select class="form-select" data-coreui-search="true" required id="evoluciones" multiple>
+                    <option value="Bulbasaur" selected>Bulbasaur 001</option>
+                    <option value="Ivysaur">Ivysaur 002</option>
+                    <option value="Venusaur">Venusaur 003</option>
+                </select>
+            </div>
+            <div class="d-flex justify-content-end">
+                <button class="button-blue text-white py-2 mb-3" type="submit">
+                    Confirmar
+                </button>
+            </div>
 
-            <form class="m-4">
-                <div class="mb-3">
-                    <input type="number" class="form-control" id="id_pokemon" required disabled hidden>
-                </div>
-                <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre de Pokemon:</label>
-                    <input type="text" class="form-control" id="nombre" required value="">
-                </div>
-                <div class="row">
-                    <div class="col mb-3">
-                        <label for="tipo" class="form-label">Tipo:</label>
-                        <select class="form-select" data-coreui-search="true" required id="tipo">
-                            <option value="fuego" selected>Fuego</option>
-                            <option value="hielo">Hielo</option>
-                            <option value="volador">Volador</option>
-                            <option value="psiquico">Psiquico</option>
-                            <option value="planta">Planta</option>
-                            <option value="veneno">Veneno</option>
-                        </select>
-                    </div>
-                    <div class="col mb-3">
-                        <label for="debilidad" class="form-label">Debilidad:</label>
-                        <select class="form-select" data-coreui-search="true" required id="debilidad">
-                            <option value="fuego" selected>Fuego</option>
-                            <option value="hielo">Hielo</option>
-                            <option value="volador">Volador</option>
-                            <option value="psiquico">Psiquico</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col mb-3">
-                        <label for="evoluciones" class="form-label">Evoluciones:</label>
-                        <select class="form-select" data-coreui-search="true" required id="evoluciones" multiple>
-                            <option value="Bulbasaur" selected>Bulbasaur 001</option>
-                            <option value="Ivysaur">Ivysaur 002</option>
-                            <option value="Venusaur">Venusaur 003</option>
-                        </select>
-                    </div>
-
-                    <div class="col mb-3">
-                        <label for="peso" class="form-label">Peso:</label>
-                        <input type="number" class="form-control" id="peso" required>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
+        </form>
     </div>
-</main>
+</div>
