--- a/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Index.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Index.cshtml
@@ -5,57 +5,59 @@
 }
 
 <h1 class="text-center my-3">Pokédex</h1>
-<div class="d-flex justify-content-end">
-    <button class="button-blue py-2 mb-3">
-        <a href="/Views/Pokemon/Agregar" type="button" class="text-white text-decoration-none">Agregar Pokémon</a>
-    </button>
-</div>
-<div class="row">
-    <div class="md-auto">
-        <div class="card table-responsive mx-5">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>#</th>
-                        <th>Nombre</th>
-                        <th>Tipo</th>
-                        <th>Habilidad</th>
-                        <th>Peso</th>
-                        <th>Altura</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            <img class="text-center" style="display:block; margin:auto;" src="https://img.pokemondb.net/sprites/black-white/anim/normal/bulbasaur.gif" alt="Bulbasaur">
-                        </td>
-                        <td>001</td>
-                        <td><a href="/Views/Pokemon/Detalle">Bulbasaur</a></td>
-                        <td>
-                            <p>
-                                <span class="badge text-bg-success rounded-pill" id="planta">Planta</span>
-                            </p>
-                            <p>
-                                <span class="badge text-bg-success rounded-pill" id="veneno">Veneno</span>
-                            </p>
-                        </td>
-                        <td>Espesura</td>
-                        <td>6.9 kg</td>
-                        <td>0.7 m</td>
-                        <td>
-                            <button class="button icon">
-                                <a href="/Views/Pokemon/Editar" type="button" class="text-white text-decoration-none" title="Modificar Pokemon"><i class="fa-solid fa-pen"></i></a>
-                            </button>
-                            <button class="button icon">
-                                <a href="/Views/Pokemon/Eliminar" type="button" class="text-white text-decoration-none" title="Eliminar Pokemon"><i class="fa-solid fa-trash"></i></a>
-                            </button>
-                        </td>
-                    </tr>
+<div class="mx-5">
+    <div class="d-flex justify-content-end">
+        <button class="button-blue py-2 mb-3">
+            <a href="/Views/Pokemon/Agregar" type="button" class="text-white text-decoration-none">Agregar Pokémon</a>
+        </button>
+    </div>
+    <div class="row">
+        <div class="md-auto">
+            <div class="table-responsive ">
+                <table class="table-style  align-middle">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>#</th>
+                            <th>Nombre</th>
+                            <th>Tipo</th>
+                            <th>Habilidad</th>
+                            <th>Peso</th>
+                            <th>Altura</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <img class="text-center" style="display:block; margin:auto;" src="https://img.pokemondb.net/sprites/black-white/anim/normal/bulbasaur.gif" alt="Bulbasaur">
+                            </td>
+                            <td>001</td>
+                            <td><a href="/Views/Pokemon/Detalle">Bulbasaur</a></td>
+                            <td>
+                                <p>
+                                    <span class="badge text-bg-success rounded-pill" id="planta">Planta</span>
+                                </p>
+                                <p>
+                                    <span class="badge text-bg-success rounded-pill" id="veneno">Veneno</span>
+                                </p>
+                            </td>
+                            <td>Espesura</td>
+                            <td>6.9 kg</td>
+                            <td>0.7 m</td>
+                            <td class="text-center">
+                                <button class="button icon">
+                                    <a href="/Views/Pokemon/Editar" type="button" class="text-white text-decoration-none" title="Modificar Pokemon"><i class="fa-solid fa-pen"></i></a>
+                                </button>
+                                <button class="button icon">
+                                    <a href="/Views/Pokemon/Eliminar" type="button" class="text-white text-decoration-none" title="Eliminar Pokemon"><i class="fa-solid fa-trash"></i></a>
+                                </button>
+                            </td>
+                        </tr>
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
