--- a/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Equipo.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Equipo.cshtml
@@ -8,8 +8,8 @@
 <h1 class="text-center mt-3 mb-4">Mis Pokémon</h1>
 <div class="row">
     <div class="md-auto">
-        <div class="card table-responsive mx-5">
-            <table class="table">
+        <div class="table-responsive mx-5">
+            <table class="table-style align-middle">
                 <thead>
                     <tr>
                         <th></th>
@@ -26,7 +26,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img class="text-center" style="display:block; margin:auto;" src="https://img.pokemondb.net/sprites/black-white/anim/normal/bulbasaur.gif" alt="Bulbasaur">
+                            <img class="text-center"src="https://img.pokemondb.net/sprites/black-white/anim/normal/bulbasaur.gif" alt="Bulbasaur">
                         </td>
                         <td>001</td>
                         <td><a href="/Views/Pokemon/Detalle">Bulbasaur</a></td>
@@ -46,7 +46,7 @@
                                 <span class="badge text-bg-success rounded-pill" id="planta">Si</span>
                             </p>
                         </td>
-                        <td>
+                        <td class="text-center">
                             <button class="button icon">
                                 <a href="" type="button" class="text-white text-decoration-none" title="Agregar a mi equipo"><i class="fa-solid fa-plus"></i></a>
                             </button>
